# salk-interactive-atlas

./: .dockerignore  .gitignore  README.md  creforwards.sh  generate_images.sh  local-dev.sh  setup.sh
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml
applications/accounts/admin-event-listener/: pom.xml
applications/accounts/admin-event-listener/jar-module/: pom.xml
applications/accounts/deploy/resources/: realm.json
applications/portal/: .gitignore  Dockerfile  README.md
applications/portal/api/: genapi.sh  openapi.yaml
applications/portal/backend/: README.md  main.py  requirements.txt
applications/portal/backend/api/: admin.py  constants.py  urls.py  utils.py
applications/portal/backend/workspaces/: serializers.py  settings.py  urls.py
applications/portal/cordmap/: README.md  setup.cfg  setup.py
applications/portal/cordmap/cordmap/: constants.py  generate_2d_histogram.py  get_all_population_keys.py  get_segmented_images_upsampled.py  main.py  user_developer_guide.md
applications/portal/cordmap/cordmap/atlas/: utils.py
applications/portal/cordmap/cordmap/data/: io.py  utils.py
applications/portal/cordmap/cordmap/entry_points/: register_3D.py  register_3D_fiducial.py  visualise_processed_data.py
applications/portal/cordmap/cordmap/napari/: vis.py
applications/portal/cordmap/cordmap/postprocessing/: prob_map.py
applications/portal/cordmap/cordmap/register/: constants.py  elastix.py  register_sections.py
applications/portal/cordmap/cordmap/register_fiducial/: bgatlasapi_wrapper.py  io.py  register.py  register_fiducials.py
applications/portal/cordmap/cordmap/representative_populations/: contour_plotting_2d_functions.py  plot_contours_2d.py  representative_populations_3d.py  util.py
applications/portal/cordmap/cordmap/utils/: data_processing.py  misc.py  upsample_cells.py
applications/portal/cordmap/doc/: cordmap_data_input_guide.md  user_developer_guide.md
applications/portal/cordmap/tests/data/validation/: transformed_gm.npy
applications/portal/cordmap/tests/test_integration/: test_registration.py
applications/portal/cordmap/tests/test_unit/test_data/: test_io.py
applications/portal/cordmap/tests/test_unit/test_utils/: test_data_processing.py  test_misc.py
applications/portal/deploy/: values-local.yaml  values.yaml
applications/portal/deploy/resources/: keycloak.json
applications/portal/frontend/: genapi.sh  geppetto_setup.sh  package-lock.json  package.json  tslint.json  webpack.dev.js
applications/portal/frontend/src/: App.tsx  config.ts  index.tsx  theme.js  utils.ts  widgets.ts
applications/salk-portal/: .gitignore  Dockerfile  clean_build.sh  entrypoint.sh  genapi.sh  geppetto_local_setup.sh  nginx.conf  package-lock.json  package.json  setup-geppetto.sh  webpack.common.js  webpack.dev.js
applications/salk-portal/conf/: default.conf  nginx.conf
applications/salk-portal/deploy/: values-local.yaml  values-minimal.yaml  values.yaml
applications/salk-portal/src/: App.tsx  config.ts  constants.js  index.tsx  theme.js  utils.ts  widgets.ts
applications/salk-portal/src/assets-parametrized/: keycloak.json
applications/salk-portal/src/components/: AboutDialog.tsx  BaseDialog.tsx  CanvasExample.jsx  CanvasExample.tsx  ColorPicker.tsx  CordImageMapper.jsx  DensityMap.tsx  ElectrophysiologyViewer.jsx  ExperimentSidebar.jsx  ExperimentViewer.jsx  ExperimentViewer.tsx  ExplorerDialog.tsx  ExplorerSidebar.jsx  ExplorerSidebarDialog.tsx  Sidebar.jsx  ThreeDViewer.tsx  TwoDViewer.tsx  icons.tsx  index.ts
applications/salk-portal/src/css/: flexLayout.less  main.less  variables.less
applications/salk-portal/src/middleware/: salkbackend.ts
applications/salk-portal/src/models/: Atlas.ts  AtlasLamina.ts  AtlasMesh.ts  AtlasSegment.ts  Experiment.ts  (+3 more)
applications/workspaces/: Dockerfile  README.md
applications/workspaces/api/: genapi.sh  openapi.yaml
applications/workspaces/backend/: db.sqlite3  main.py  manage.py  requirements.txt  setup.py  tox.ini
applications/workspaces/cloudharness-django/: setup.cfg
applications/workspaces/cloudharness-django/cloudharness_django/: README.md  exceptions.py  middleware.py  settings.py
applications/workspaces/cloudharness-django/cloudharness_django/services/: events.py
applications/workspaces/cordmap/: .pre-commit-config.yaml  README.md
applications/workspaces/deploy/: values-dev.yaml  values-prod.yaml  values.yaml
applications/workspaces/metacell-kcoidc/: setup.cfg
applications/workspaces/metacell-kcoidc/kcoidc/: README.md  admin.py  apps.py  exceptions.py  kcoidc_settings.py  middleware.py  oidc.py  serializers.py
applications/workspaces/metacell-kcoidc/kcoidc/services/: __init__.py  auth.py  events.py  user.py
deployment/: codefresh-demo.yaml  codefresh-dev.yaml  codefresh-prod.yaml
deployment-configuration/: codefresh-build-template.yaml  codefresh-template-demo.yaml  codefresh-template-dev.yaml  codefresh-template-prod.yaml  values-template.yaml
deployment-configuration/helm/: Chart.yaml
scripts/: split_mesh_per_segment.py  update_pdf_image_colors.py
(+585 files in other folders)
