[metadata]
name = cordmap
url = https://github.com/MetaCell/cordmap
download_url = https://github.com/MetaCell/cordmap
description = Analyse spinal cord data in a common space
long_description = file: README.md
long_description_content_type = text/markdown
author = MetaCell
author_email = info@metacell.us
keywords = registration, atlas
project_urls = 
	Source = https://github.com/MetaCell/cordmap
	Tracker = https://github.com/MetaCell/cordmap/issues
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows :: Windows 10
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only


[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = 
	setuptools_scm
install_requires =
	fire
	itk==5.2.1.post1
	itk-elastix==0.13.0
	napari[all]
	napari-plugin-engine>=0.1.4
	matplotlib
	scikit-image
	Pillow
	scipy
	pyside2
	fancylog
	ray[default]
	bg-atlasapi
	redis
	numpy==1.23.1
    pandas==1.4.3

[options.extras_require]
dev = 
	black
	pytest
	pytest-cov
	gitpython
	bump2version
	pre-commit
	flake8
	coverage

[options.entry_points]
console_scripts =
    cordmap = cordmap.entry_points.register_3D:main
    cordmap-fiducial = cordmap.entry_points.register_3D_fiducial:main
    cordmap-vis = cordmap.entry_points.visualise_processed_data:main

napari.plugin =
    cordmap-points-reader = cordmap.napari.points_reader
    cordmap-atlas-reader = cordmap.napari.atlas_reader

[bdist_wheel]
universal = 1

[flake8]
ignore = W503, E722
max-line-length = 79
exclude = __init__.py,build,.eggs

[bumpversion]
current_version = 0.0.2-rc2
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<rc>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}{rc}
	{major}.{minor}.{patch}


[bumpversion:part:release]
optional_value = prod
first_value = rc
values = 
	rc
	prod

[bumpversion:part:rc]

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:cordmap/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[tool:pytest]
addopts = --cov=cordmap