[metadata]
name = cloudharness-django
version = 0.1
description = A Django app to use various CloudHarness services, e.g. the keycloak server
long_description = A Django app to use various CloudHarness services, e.g. the keycloak server
author = Zoran Sinnema
author_email = zoran@metacell.us
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django==3.2.11
    djangorestframework==3.13.1
    pyyaml
    django-admin-extra-buttons
    # temporary use this fork of python keycloak
    # because of bug: https://github.com/marcospereirampj/python-keycloak/pull/267
    python-keycloak @ git+https://github.com/coelias/python-keycloak.git
